--- a/pack.toml
+++ b/pack.toml
@@ -11,17 +11,17 @@ ipkg   = "docs.ipkg"
 [custom.all.elab-util]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-elab-util"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "elab-util.ipkg"
 
 [custom.all.sop]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-sop"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "sop.ipkg"
 
 [custom.all.pretty-show]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-pretty-show"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "pretty-show.ipkg"
