--- a/pack.toml
+++ b/pack.toml
@@ -25,3 +25,9 @@ type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-pretty-show"
 commit = "latest:main"
 ipkg   = "pretty-show.ipkg"
+
+[custom.all.elab-pretty]
+type   = "git"
+url    = "https://github.com/stefan-hoeck/idris2-elab-util"
+commit = "latest:main"
+ipkg   = "elab-pretty.ipkg"
