[ refactor ] use cast instead of pack

--- a/pack.toml
+++ b/pack.toml
@@ -31,3 +31,9 @@ type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-elab-util"
 commit = "latest:main"
 ipkg   = "elab-pretty.ipkg"
+
+[custom.all.parser]
+type   = "git"
+url    = "https://github.com/stefan-hoeck/idris2-parser"
+commit = "latest:main"
+ipkg   = "parser.ipkg"
