[ test ] Add a hedgehog test testing hedgehog with hedgehog

--- a/.github/workflows/ci-hedgehog.yml
+++ b/.github/workflows/ci-hedgehog.yml
@@ -31,3 +31,5 @@ jobs:
         run: pack install hedgehog
       - name: Build docs
         run: pack typecheck hedgehog-docs
+      - name: Test lib
+        run: pack test hedgehog
